[gd_scene load_steps=7 format=3 uid="uid://bmtlno0lt8ptf"]

[ext_resource type="Script" path="res://scripts/dog.gd" id="1_dqguw"]
[ext_resource type="PackedScene" uid="uid://dpsxd4glwv6wc" path="res://meshes/dog_mesh.tscn" id="2_onohp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xbbwa"]
radius = 0.335474
height = 2.94468

[sub_resource type="SphereShape3D" id="SphereShape3D_8qks0"]
radius = 0.262635

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m6p7s"]
radius = 0.62487
height = 1.71191

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hwii2"]
height = 3.1018

[node name="Dog" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
script = ExtResource("1_dqguw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.266707, 0.0229026)
visible = false
shape = SubResource("CapsuleShape3D_xbbwa")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.238928, -1.20586)
visible = false
shape = SubResource("SphereShape3D_8qks0")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1
height = 0.67

[node name="dog_updatedc3" parent="." instance=ExtResource("2_onohp")]
transform = Transform3D(-0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, 0, -0.607935, 1.255)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1.74463)
shape = SubResource("CapsuleShape3D_m6p7s")

[node name="Area3D2" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.166664, -0.128)
shape = SubResource("CapsuleShape3D_hwii2")

[node name="Timer" type="Timer" parent="."]

[node name="wait" type="Timer" parent="."]
wait_time = 0.5

[node name="ded_tim" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="area_entered" from="Area3D2" to="." method="_on_area_3d_2_area_entered"]
[connection signal="area_exited" from="Area3D2" to="." method="_on_area_3d_2_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
[connection signal="timeout" from="ded_tim" to="." method="_on_ded_tim_timeout"]
